--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ rootProject.name = 'classpy'
 include 'classpy-common'
 include 'classpy-classfile'
 include 'classpy-binarychunk'
+include 'classpy-evm'
 include 'classpy-gui'
